# MouseReach

./: .gitignore  AGENTS.md  ALGORITHM_REFERENCE.md  ALGORITHM_VALIDATION.md  ALGORITHM_VS_DL_DECISION.md  CLAUDE.md  CONTRIBUTING.md  DELIVERABLE_SUMMARY.md  DOCUMENTATION_GUIDE.md  EVAL_FINDINGS.md  GT_REVIEW_NEEDED.md  INSTALL.md  LICENSE  QUICKSTART.md  REACH_KINEMATIC_DATA_DICTIONARY.md  README.md  RECALIBRATION_PLAYBOOK.md  USER_GUIDE.md  VERSION_SIMULATOR_QUICKREF.md  VERSION_SIMULATOR_README.md  analyze_false_positives.py  generate_algorithm_figure.py  install.bat  pyproject.toml  requirements.txt  v53_algorithm_description.txt
ASPA2/: README.md  aspa2_structure.py  pyproject.toml
ASPA2/Step1_Segmentation/: 1_batch_segment.py  2_triage_results.py  4_advance_validated.py  README.md
ASPA2/Step1_Segmentation/core/: __init__.py
ASPA2/Step1_Segmentation/docs/: algorithm_details.md
ASPA2/Step2_ReachDetection/: README.md
ASPA2/aspa2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ASPA2/aspa2_core/: __init__.py  calibration.py  dlc_utils.py  segmenter_robust.py
ASPA2/config/: default_config.json
ASPA2/scripts/: 0_run_pipeline.py  3_reaches.py  4_score.py  5_compile.py  batch_segment.py
ASPA2/tools/: boundary_annotator_v2.py
ASPA2/tools/napari_viewer/: __init__.py  _widget.py
Archive/Pipeline_0_0/: README.md
Archive/code_snapshots/: reach_detector_v4.2_20260209_143222.py
Archive/temp_scripts/: analyze_reach_kinematics.py  analyze_reach_kinematics_proper.py  build_explorer.py  derive_reach_outcomes.py  explore.py  quick_graph.py  quick_unified_export.py
MouseReach_Improvement_Process/: README.md
deploy/: MouseReach-Toggle.bat  MouseReach-Watcher-Startup.bat  install.bat
docs/decision_trees/: build_v804_algorithm_tree.py  build_v804_algorithm_tree_v2.py  build_v804_complete_binary_tree.py  build_v804_matching_tree.py  (+1 more)
historical_manual_data/: analyze_historical_groups.py  diagnose_L_group.py  plot_historical_groups.py  verify_L_data_alignment.py
old/: aspa2_model_viewer.py  aspa2_napari_plugin.py  aspa2_pellet_model_builder.py  aspa2_pellet_segmenter.py  aspa2_ruler.py  aspa2_runner.py  aspa2_segment_finder.py  aspa2_segment_viewer.py  aspa2_segmenter_v3.py
plans/: BACKGROUND_residual_attack_findings.md  CARDINAL_RULE_NUANCE_2026-05-18.md  E2E_CASCADE_VS_GT_REACHES.md  E2E_CASCADE_v8_PRODUCTION.md  HANDOFF_collin_pull_expected_triage.md  HANDOFF_gt_tool_expected_triage.md  HISTORICAL_REPROCESSING_PLAN.md  HOLDOUT_GENERALIZATION_BSW_W08.md  HOLDOUT_GENERALIZATION_v6_CASCADE.md  PI_MEETING_2026-05-04.md  PI_MEETING_BASELINE_VS_CURRENT.md  WIDGET_GT_INTEGRATION_2026-05-19.md
scripts/: _compare_v6_0_3_vs_fix_c.py  _edit_0408_abnormal_to_retrieved_2026-06-03.py  _probe_0413_s15_startwindow_2026-06-03.py  _probe_dlc_keypoints.py  _probe_earlydisplace_corpuswide_2026-06-03.py  _probe_holdout_new_errors_2026-06-03.py  _probe_manifest_events.py  _probe_nonexh_gt_outcomes_2026-06-03.py  _probe_stage_21_holdout_relevance.py  _probe_startwindow_two_2026-06-03.py  _probe_two_pellet_teleport_cnt0303_p2_s7.py  _probe_untouched_gt_stale_ifr.py  _probe_v603_full_state.py  _rescore_v603_against_updated_gt.py  analyze_fp_vs_tp.py  analyze_v8_failure_modes.py  bsw_retune_smoke_test.py  calibrate_codetection_natural_envelope.py  calibrate_thresholds.py  check_gt_numbering.py  check_predominantly_on_pillar_rule.py  check_seg_drift_corpus.py  check_short_segment_pellet_motion.py  classify_fps.py  debug_stage1_new.py  diagnose_apex_double_hump_all_videos.py  diagnose_apex_double_hump_multi_video.py  diagnose_cnt0413_apex_double_hump.py  diagnose_cnt0413_merge_pair_comparison.py  diagnose_codetection_triage.py  diagnose_longest_reaches_for_length_cap.py  diagnose_multi_pass_boundary_refinement.py  diagnose_passes.py  diagnose_paw_lk_interior_dip_for_split.py  diagnose_per_video_threshold_calibration.py  diagnose_per_video_threshold_otsu.py  diagnose_stage5_jitter.py  diagnose_stage7_walkback_failures.py  diagnose_stranded_fn_failure_modes.py  diagnose_v603_displaced_outside_pellet_position.py  (+111 more)
src/: AGENTS.md
tests/: test_watcher_integration.py  test_watcher_integration_README.md
training/: DEEP_LEARNING_PROPOSAL.md  __init__.py  analyze_algo_agreement.py  analyze_error_patterns.py  analyze_failures.py  analyze_false_positives.py  analyze_frame_features.py  analyze_reach_accuracy.py  analyze_splitting.py  analyze_v42_errors.py  analyze_v52_errors.py  compare_versions.py  config.py  data_loader.py  debug_data.py  debug_features.py  diagnose_early_ends.py  diagnose_fp_causes.py  diagnose_gap_structure.py  diagnose_splitter_v5.py  diagnose_start_errors.py  diagnose_start_errors_v2.py  feature_extraction.py  investigate_misses.py  learn_from_mistakes.py  models.py  probe_end_signals.py  probe_start_case.py  rerun_detection_v4.py  test_setup.py  train.py  train_boundary_polisher.py  watchdog_model.py
ucsf_collab_data/: PELLET_CEILING_RESULTS.md  all_groups_disharmony.py  all_groups_disharmony_scatter.py  all_groups_kinematic_comparison.py  all_groups_spaghetti.py  all_groups_suspect_identification.py  all_groups_umap.py  analyze_ucsf_collab.py  aspa_version_analysis.py  bodypart_positional_analysis.py  bodypart_tracking_quality.py  camera_setup_comparison.py  dlc_tracking_quality_report.py  group_L_analysis_output.txt  group_L_summary.txt  m05_reach_comparison_filmstrip.py  m_build_review_list.py  m_disharmony_metric.py  m_displacement_all_groups.py  m_displacement_threshold.py  m_export_labeled_frames.py  m_individual_anomaly_analysis.py  m_lesion_classification.py  m_plot_offenders.py  m_plot_pre_vs_post_m05.py  m_problem_reaches.py  m_provenance_audit.py  m_provenance_trace.py  m_session_diagnostic.py  m_spaghetti_4phase_m05.py  m_spaghetti_all_mice.py  m_spaghetti_m05.py  m_spaghetti_overlay_m05.py  m_spaghetti_pellet_m05.py  m_suspect_peak_frames.py  m_suspect_reach_sequences.py  m_trajectory_landmarks.py  m_trajectory_landmarks_v2.py  m_trajectory_landmarks_v3.py  m_tray_verification_collage.py  (+7 more)
util_Tools/: directory_mapper.py
(+474 files in other folders)
